client/src/style.scss
$maincolor: rgb(255, 255, 255);

body {
    margin: 0;
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
        "Droid Sans", "Helvetica Neue", sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    background-color: $maincolor;
    color: black;
    display: flex;
    justify-content: center;
    background-color: #fff;
}

.success,
.App {
    max-width: 700px;
    flex: 1 0 auto;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
}

.title {
    margin-bottom: 0.5em;
}

.people {
    position: relative;
    .people_tooltip {
        position: absolute;
        visibility: hidden;
        opacity: 0;
        transition: opacity 0.2s ease-in-out;
        background-color: #000a;
        padding: 6px;
        font-size: 14px;
        border-radius: 6px;
        color: white;
        z-index: 5;
        p {
            margin: 0;
        }
    }
    &:hover .people_tooltip {
        visibility: visible;
        opacity: 1;
    }
}

.input {
    display: flex;
    position: relative;
    box-sizing: border-box;
    align-items: center;
    background-color: yellowgreen;
    width: 100%;
    border-radius: 12px;
    padding: 3px;
    padding-left: 12px;
    box-shadow: 0 0 5px 2px #0002;
    margin: 12px 0;

    label {
        padding-left: 2px;
    }

    input {
        font-size: 1em;
        margin: 0;
        margin-left: 8px;
        padding: 4px;
        border-radius: 0px 8px 8px 0px;
        width: 100%;
        appearance: none;
        border: none;
    }
}

.calendar_container {
    display: flex;
    max-height: 300px;
}

$dimension: 25px;

.react-calendar {
    border: none;
    border-radius: 12px;
    box-shadow: 0 0 8px 3px #0002;
    overflow: hidden;
}

.react-calendar__navigation {
    font-size: 1em;
}

.react-calendar__navigation__label,
.react-calendar__navigation__arrow {
    color: yellowgreen;
    font-size: 1em;
    font-weight: bold;
}

.react-calendar__navigation__label {
    background-color: transparent !important;
}

.react-calendar__navigation__arrow {
    &:first-child {
        border-top-left-radius: 12px;
    }
    &:last-child {
        border-top-right-radius: 12px;
    }
}

.react-calendar__tile {
    position: relative;
    padding: 0;
    background: none !important;
    z-index: 0;
    overflow: visible !important;

    .tile_container {
        display: flex;
        justify-content: center;
        align-items: center;
        width: 100%;
        height: 100%;
    }

    .tile {
        margin: 4px 0;
        display: flex;
        justify-content: center;
        align-items: center;
        height: $dimension;
        width: $dimension;
        border-radius: 50%;
        z-index: 2;
        .tile_tooltip {
            font-size: 10px;
            visibility: hidden;
            position: absolute;
            z-index: 3;
            bottom: calc(100% + 4px);
            opacity: 0;
            transition: opacity 0.2s ease-in-out;
            background-color: #0008;
            color: white;
            padding: 3px;
            border-radius: 4px;
        }
        &:hover .tile_tooltip {
            visibility: visible;
            opacity: 1;
        }
    }

    &.react-calendar__tile--active {
        .tile {
            background-color: yellowgreen;
        }
    }

    &:hover {
        .tile {
            background-color: #0002;
        }
    }

    &::before {
        position: absolute;
        top: 50%;
        left: 0;
        height: $dimension;
        width: 50%;
        transform: translate(0, -50%);
        background-color: rgba(153, 205, 50, 0.4);
        z-index: 1;
    }

    &.range {
        &::before {
            content: "";
            width: 100%;
        }
    }

    &.range_start {
        .tile {
            background-color: yellowgreen;
        }
        &::before {
            content: "";
            left: 50%;
        }
    }

    &.range_end {
        .tile {
            background-color: yellowgreen;
        }
        &::before {
            content: "";
        }
    }

    &.range_start.range_end::before {
        content: none;
    }

    &.react-calendar__tile--active {
        .tile {
            background-color: rgb(155, 215, 31);
            box-shadow: 0px 0px 5px 2px #4803;
        }
    }

    abbr {
        display: none;
    }
}

.react-calendar__month-view__days__day--weekend:disabled {
    color: #f99;
}

.range_display {
    background-color: #eee;
    border-radius: 12px;
    box-shadow: 0 0 8px 3px #0002;
    padding: 12px;
    margin-left: 32px;

    .range {
        display: flex;
        align-items: center;
        padding: 4px;
        border-bottom: 1px solid #aaa;
        .date {
            width: 90px;
            cursor: pointer;
            padding: 6px;
            border-radius: 8px;
            span {
                display: block;
                font-size: 0.7em;
                font-weight: bold;
            }
            &.selected {
                background-color: white;
                box-shadow: 0px 0px 5px 2px #0002;
                span {
                    color: yellowgreen;
                }
            }
        }
        .cancel {
            transition: all ease-in-out 0.2s;
            cursor: pointer;
            height: 18px;
            width: 18px;
            margin-left: 4px;
            display: flex;
            align-items: center;
            justify-content: center;
            border-radius: 50%;
            background-color: #0002;
            &:hover {
                background-color: #0004;
            }
        }
        &:last-child {
            border: none;
        }
    }
}

.gradient {
    position: relative;
    height: 8px;
    width: 100%;
    border-radius: 4px;
    background: linear-gradient(90deg, hsl(190, 95%, 100%), hsl(190, 95%, 60%));
    margin-top: 24px;
    box-shadow: 0 0 5px 2px #0002;
    &::before {
        position: absolute;
        content: "0%";
        font-size: 10px;
        top: -12px;
    }
    &::after {
        position: absolute;
        content: "100%";
        font-size: 10px;
        top: -12px;
        right: 0px;
    }
}

.submit_button {
    transition: box-shadow 0.2s ease-in-out;
    appearance: none;
    cursor: pointer;
    align-self: center;
    border: none;
    background-color: yellowgreen;
    margin-top: 32px;
    font-size: 1.1em;
    padding: 14px 30px;
    border-radius: 8px;
    box-shadow: 0 0 5px 2px #0002;
    &:hover {
        box-shadow: 0 0 10px 2px #0003;
    }
    &:disabled {
        cursor: not-allowed;
        background-color: rgba(153, 205, 50, 0.4);
    }
}

.suggestions {
    list-style: none;
    position: absolute;
    min-width: 200px;
    margin: 0;
    padding: 8px;
    border-radius: 8px;
    top: calc(18px + 1em);
    left: 60px;
    background-color: white;
    box-shadow: 0 0 5px 2px #0002;

    li {
        padding: 4px;
        border-bottom: 1px solid #aaa;
        &:last-child {
            border-bottom: none;
        }
        &.suggestion-active {
            background-color: #eee;
        }
    }
}

@media (max-width: 700px) {
    .calendar_container {
        flex-direction: column;
        max-height: none;
        align-items: center;
        align-self: center;
        .range_display {
            margin-left: 0px;
            margin-top: 32px;
        }
    }
}

#root {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
}

footer {
    text-align: center;
    max-width: 700px;
    padding: 16px;
    p {
        font-size: 0.8em;
        color: #777;
        margin: 2px;
    }
    a {
        color: yellowgreen;
        text-decoration: none;
    }
}

p.error {
    color: #f42;
    font-weight: bold;
    margin: none;
}

.no-suggestions {
    display: none;
}

.success {
    text-align: center;
    justify-content: center;
}

